# searchproxy

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  SKILL.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
.hermes/plans/: 2026-05-03_0801-root-swagger-url.md
app/: clean_executor.py  clients.py  config.py  dependencies.py  main.py  observability.py  openapi_deref.py  schemas.py
app/middleware/: correlation.py  json_formatter.py  request_logger.py
app/routers/: fetch.py  firecrawl.py  logs.py  metrics.py  retrieve.py  search.py  searxng.py  vane.py
app/services/: anti_bot_base.py  cache.py  content_cleaner.py  crawl4ai.py  fetch_chain.py  fetch_utils.py  firecrawl_compat.py  jina_reader.py  litellm_search.py  metrics.py  models.py  rerank_service.py  retrieve_service.py  retrieve_steps.py  scrape_do.py  scraperapi.py  searxng_compat.py  searxng_ui.py  sqlite_base.py  synthesis_service.py  vane_proxy.py
docs/: searxng-compat-spec.md
open-webui/: README.md  prompt-v2.md  prompt-v3.md  prompt.md  skill-v2.md  skill.md
project/: CODE_REVIEW.md  DECISIONS.md  ROADMAP.md  TODO.md
tests/: conftest.py  test_auth.py  test_cache.py  test_content_cleaner.py  test_fetch_http.py  test_firecrawl.py  test_main.py  test_openapi.py  test_retrieve.py  test_search_and_fetch.py  test_searxng.py  test_vane.py
